src/gen/JythonParser.java
package gen;// Generated from /Users/alirezadehghannayeri/Desktop/University/7th semester/compiler/project/first/Jython-compiler/grammar/Jython.g4 by ANTLR 4.10.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JythonParser extends Parser {
    public static final int
            TYPE = 1, INT = 2, FLOATING_POINT = 3, STRING = 4, BOOL = 5, CLASS = 6, IMPORT = 7,
            DEF = 8, VOID = 9, RETURN = 10, AND = 11, OR = 12, IF = 13, WHILE = 14, ELIF = 15, ELSE = 16,
            PRINT = 17, FOR = 18, IN = 19, RANGE = 20, NONE = 21, LPAREN = 22, RPAREN = 23, LBRACE = 24,
            RBRACE = 25, LBRACK = 26, RBRACK = 27, SEMI = 28, COMMA = 29, DOT = 30, ASSIGN = 31,
            GT = 32, LT = 33, BANG = 34, TILDE = 35, QUESTION = 36, COLON = 37, EQUAL = 38, LE = 39,
            GE = 40, NOTEQUAL = 41, INC = 42, DEC = 43, ADD = 44, SUB = 45, MUL = 46, DIV = 47, BITAND = 48,
            BITOR = 49, CARET = 50, MOD = 51, ADD_ASSIGN = 52, SUB_ASSIGN = 53, MUL_ASSIGN = 54,
            DIV_ASSIGN = 55, AND_ASSIGN = 56, OR_ASSIGN = 57, XOR_ASSIGN = 58, MOD_ASSIGN = 59,
            LSHIFT_ASSIGN = 60, RSHIFT_ASSIGN = 61, URSHIFT_ASSIGN = 62, CLASSNAME = 63, ID = 64,
            LETTER = 65, INTEGER = 66, FLOAT = 67, DIGIT = 68, OPEN_COMMENT = 69, CLOSE_COMMENT = 70,
            COMMENT = 71, ONE_LINE_COMMENT = 72, WHITESPACE = 73;
    public static final int
            RULE_program = 0, RULE_importclass = 1, RULE_classDef = 2, RULE_class_body = 3,
            RULE_varDec = 4, RULE_arrayDec = 5, RULE_methodDec = 6, RULE_constructor = 7,
            RULE_parameter = 8, RULE_statement = 9, RULE_return_statment = 10, RULE_condition_list = 11,
            RULE_condition = 12, RULE_if_statment = 13, RULE_while_statment = 14,
            RULE_if_else_statment = 15, RULE_print_statment = 16, RULE_for_statment = 17,
            RULE_method_call = 18, RULE_assignment = 19, RULE_exp = 20, RULE_prefixexp = 21,
            RULE_args = 22, RULE_explist = 23, RULE_arithmetic_operator = 24, RULE_relational_operators = 25,
            RULE_assignment_operators = 26;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public JythonParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "importclass", "classDef", "class_body", "varDec", "arrayDec",
                "methodDec", "constructor", "parameter", "statement", "return_statment",
                "condition_list", "condition", "if_statment", "while_statment", "if_else_statment",
                "print_statment", "for_statment", "method_call", "assignment", "exp",
                "prefixexp", "args", "explist", "arithmetic_operator", "relational_operators",
                "assignment_operators"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, "'int'", "'float'", "'string'", "'bool'", "'class'", "'import'",
                "'def'", "'void'", "'return'", "'and'", "'or'", "'if'", "'while'", "'elif'",
                "'else'", "'print'", "'for'", "'in'", "'range'", "'none'", "'('", "')'",
                "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'",
                "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'++'", "'--'",
                "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='",
                "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='",
                null, null, null, null, null, null, "'#*'", "'*#'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "TYPE", "INT", "FLOATING_POINT", "STRING", "BOOL", "CLASS", "IMPORT",
                "DEF", "VOID", "RETURN", "AND", "OR", "IF", "WHILE", "ELIF", "ELSE",
                "PRINT", "FOR", "IN", "RANGE", "NONE", "LPAREN", "RPAREN", "LBRACE",
                "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT",
                "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL",
                "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET",
                "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN",
                "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN",
                "URSHIFT_ASSIGN", "CLASSNAME", "ID", "LETTER", "INTEGER", "FLOAT", "DIGIT",
                "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", "WHITESPACE"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Jython.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == IMPORT) {
                    {
                        {
                            setState(54);
                            importclass();
                        }
                    }
                    setState(59);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(61);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(60);
                            classDef();
                        }
                    }
                    setState(63);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == CLASS);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImportclassContext importclass() throws RecognitionException {
        ImportclassContext _localctx = new ImportclassContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_importclass);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(IMPORT);
                setState(66);
                match(CLASSNAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassDefContext classDef() throws RecognitionException {
        ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_classDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(CLASS);
                setState(69);
                match(CLASSNAME);
                setState(80);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAREN) {
                    {
                        setState(70);
                        match(LPAREN);
                        setState(71);
                        match(CLASSNAME);
                        setState(76);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(72);
                                    match(COMMA);
                                    setState(73);
                                    match(CLASSNAME);
                                }
                            }
                            setState(78);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(79);
                        match(RPAREN);
                    }
                }

                setState(82);
                match(LBRACE);
                setState(86);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE) | (1L << DEF) | (1L << CLASSNAME))) != 0)) {
                    {
                        {
                            setState(83);
                            class_body();
                        }
                    }
                    setState(88);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(89);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Class_bodyContext class_body() throws RecognitionException {
        Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_class_body);
        try {
            setState(95);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(91);
                    varDec();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(92);
                    methodDec();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(93);
                    constructor();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(94);
                    arrayDec();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDecContext varDec() throws RecognitionException {
        VarDecContext _localctx = new VarDecContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_varDec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                _la = _input.LA(1);
                if (!(_la == TYPE || _la == CLASSNAME)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(98);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ArrayDecContext arrayDec() throws RecognitionException {
        ArrayDecContext _localctx = new ArrayDecContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_arrayDec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                _la = _input.LA(1);
                if (!(_la == TYPE || _la == CLASSNAME)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(101);
                match(LBRACK);
                setState(102);
                match(INTEGER);
                setState(103);
                match(RBRACK);
                setState(104);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MethodDecContext methodDec() throws RecognitionException {
        MethodDecContext _localctx = new MethodDecContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_methodDec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                match(DEF);
                setState(109);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case TYPE:
                    case CLASSNAME: {
                        setState(107);
                        _la = _input.LA(1);
                        if (!(_la == TYPE || _la == CLASSNAME)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                    }
                    break;
                    case VOID: {
                        setState(108);
                        match(VOID);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(111);
                match(ID);
                setState(112);
                match(LPAREN);
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == TYPE || _la == CLASSNAME) {
                    {
                        {
                            setState(113);
                            parameter();
                        }
                    }
                    setState(118);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(119);
                match(RPAREN);
                setState(120);
                match(LBRACE);
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(121);
                            statement();
                        }
                    }
                    setState(126);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(127);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstructorContext constructor() throws RecognitionException {
        ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_constructor);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                match(DEF);
                setState(130);
                _la = _input.LA(1);
                if (!(_la == TYPE || _la == CLASSNAME)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(131);
                match(LPAREN);
                setState(135);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == TYPE || _la == CLASSNAME) {
                    {
                        {
                            setState(132);
                            parameter();
                        }
                    }
                    setState(137);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(138);
                match(RPAREN);
                setState(139);
                match(LBRACE);
                setState(143);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(140);
                            statement();
                        }
                    }
                    setState(145);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(146);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParameterContext parameter() throws RecognitionException {
        ParameterContext _localctx = new ParameterContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_parameter);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                varDec();
                setState(153);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(149);
                            match(COMMA);
                            setState(150);
                            varDec();
                        }
                    }
                    setState(155);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_statement);
        try {
            setState(165);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(156);
                    varDec();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(157);
                    assignment();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(158);
                    print_statment();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(159);
                    method_call();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(160);
                    return_statment();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(161);
                    if_statment();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(162);
                    while_statment();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(163);
                    if_else_statment();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(164);
                    for_statment();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Return_statmentContext return_statment() throws RecognitionException {
        Return_statmentContext _localctx = new Return_statmentContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_return_statment);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(167);
                match(RETURN);
                setState(168);
                exp(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Condition_listContext condition_list() throws RecognitionException {
        Condition_listContext _localctx = new Condition_listContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_condition_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(170);
                condition();
                setState(175);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == AND || _la == OR) {
                    {
                        {
                            setState(171);
                            _la = _input.LA(1);
                            if (!(_la == AND || _la == OR)) {
                                _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            setState(172);
                            condition();
                        }
                    }
                    setState(177);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConditionContext condition() throws RecognitionException {
        ConditionContext _localctx = new ConditionContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_condition);
        try {
            setState(184);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(178);
                    match(BOOL);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(179);
                    prefixexp(0);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    {
                        setState(180);
                        exp(0);
                    }
                    setState(181);
                    relational_operators();
                    {
                        setState(182);
                        exp(0);
                    }
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final If_statmentContext if_statment() throws RecognitionException {
        If_statmentContext _localctx = new If_statmentContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_if_statment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(186);
                match(IF);
                setState(187);
                match(LPAREN);
                setState(188);
                condition_list();
                setState(189);
                match(RPAREN);
                setState(190);
                match(LBRACE);
                setState(194);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(191);
                            statement();
                        }
                    }
                    setState(196);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(197);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final While_statmentContext while_statment() throws RecognitionException {
        While_statmentContext _localctx = new While_statmentContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_while_statment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(199);
                match(WHILE);
                setState(200);
                match(LPAREN);
                setState(201);
                condition_list();
                setState(202);
                match(RPAREN);
                setState(203);
                match(LBRACE);
                setState(207);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(204);
                            statement();
                        }
                    }
                    setState(209);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(210);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final If_else_statmentContext if_else_statment() throws RecognitionException {
        If_else_statmentContext _localctx = new If_else_statmentContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_if_else_statment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(212);
                match(IF);
                setState(213);
                match(LPAREN);
                setState(214);
                condition_list();
                setState(215);
                match(RPAREN);
                setState(216);
                match(LBRACE);
                setState(220);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(217);
                            statement();
                        }
                    }
                    setState(222);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(223);
                match(RBRACE);
                setState(239);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ELIF) {
                    {
                        {
                            setState(224);
                            match(ELIF);
                            setState(225);
                            match(LPAREN);
                            setState(226);
                            condition_list();
                            setState(227);
                            match(RPAREN);
                            setState(228);
                            match(LBRACE);
                            setState(232);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                                {
                                    {
                                        setState(229);
                                        statement();
                                    }
                                }
                                setState(234);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                            setState(235);
                            match(RBRACE);
                        }
                    }
                    setState(241);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(242);
                match(ELSE);
                setState(243);
                match(LBRACE);
                setState(247);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (TYPE - 1)) | (1L << (RETURN - 1)) | (1L << (IF - 1)) | (1L << (WHILE - 1)) | (1L << (PRINT - 1)) | (1L << (FOR - 1)) | (1L << (CLASSNAME - 1)) | (1L << (ID - 1)))) != 0)) {
                    {
                        {
                            setState(244);
                            statement();
                        }
                    }
                    setState(249);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(250);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
